# SeeThing

./: .gitignore  CMakeLists.txt  ProjectImg.code-workspace  README.md  Regions.hpp  TP1.cpp
include/: Helper.h  Helper.hpp  Imloader.h  Mat.h  Regions.h  Vec.h
include/imgui/examples/tentative/: example_glfw_opengl3  main.cpp  sdsdds.cpp  shader.fs  shader.vs
include/imgui/examples/tentative/App/: Application.cpp  Application.h
include/openglutils/: Buffers.h  CMakeCache.txt  CMakeLists.txt  Program.h  Texture.h  cmake_install.cmake  glcore.h  main.cpp  test
includes/Core/: ImgApp.h
includes/ImgEditorEngine/: ImgEditorEngine.h  README.md  RegionGrowingAlg.h  RegionGrowingEngine.h  Regions.h  StructParam.h  aaz  bbz  ds
includes/Imgui/: .gitignore
includes/Imgui/examples/tentative/: Makefile  example_glfw_opengl3  main.cpp
includes/Models/: Canvas.h  Layer.h
includes/Openglutils/: Buffers.h  Program.h  Texture.h  main.cpp
includes/RenderContext/: ImGuiAppContext.h  OpenGLContext.h  glcore.h
includes/UiWindows/: Dockspace.h  GlobalStates.h  ImgEditor.h  RGPanel.h  UiCompUtils.h  img.h
includes/Utils/: Geo.h  Helper.h  Imloader.h  Mat.h  Vec.h
includes/Utils/tests/: dumbenchmark.cpp  transposesplitmerge.cpp
ressources/shaders/: colchange.fs  colchange.vs  colorchange.fs  imgoutput.fs  imgoutput.vs
src/: main.cpp
src/Core/: ImgApp.cpp
src/ImgEditorEngine/: ImgEditorEngine.cpp  RegionGrowingAlg.cpp  RegionGrowingEngine.cpp  Regions.cpp
src/Models/: Canvas.cpp
src/Openglutils/: Buffers.cpp  Makefile  Program.cpp  Texture.cpp
src/RenderContext/: ImGuiAppContext.cpp  OpenGLContext.cpp
src/UiWindows/: Dockspace.cpp  GlobalStates.cpp  ImgEditor.cpp  RGPanel.cpp  UiCompUtils.cpp
src/Utils/: Helper.cpp  Imloader.cpp  Mat.cpp  Mesh.cpp
tests/: converdttest.cpp  mattestinitat.cpp  mattestop.cpp  testvec.cpp
